Added movie list sorting

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React MERN movie app."
     />
+      <link rel="icon" type="image/x-icon" href="logo.png">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
