--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,8 @@
       <link rel="icon" type="image/x-icon" href="logo.png">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>MovieLog</title>
+
+    <title>Flix Log</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
